# SpraySystem

./: README
SpraySystem/: CMakeLists.txt  Resources.qrc  inc  main.cpp
SpraySystem/Bussiness/: HeadDistanceMonitor.cpp  HeadDistanceMonitor.h  contextstatemachine.cpp  contextstatemachine.h  mainprocess.cpp  mainprocess.h  mainprocess.h.autosave  signalprocess.cpp  signalprocess.h  statemachinefactory.cpp  statemachinefactory.h  trajectoryprocess.cpp  trajectoryprocess.h
SpraySystem/Data/: SignalState.cpp  SignalState.h  StaticData.cpp  StaticData.h  StructData.h  basedatapaser.cpp  basedatapaser.h
SpraySystem/Data/Data/: camera.json  mc.json  plc.json  robot.json  trajgen1.json  trajgen2.json  user.json  配置说明.txt
SpraySystem/DataAccess/Models/Camera/: camera.h
SpraySystem/DataAccess/Models/MotionController/: motioncontroller.cpp  motioncontroller.h
SpraySystem/DataAccess/Models/PLC/: plc.h
SpraySystem/DataAccess/Models/Product/: product.h
SpraySystem/DataAccess/Models/Robot/: robot.h
SpraySystem/DataAccess/Models/System/: system.h
SpraySystem/DataAccess/Models/User/: user.h
SpraySystem/DataAccess/Property/: cameraproperty.cpp  cameraproperty.h  motioncontrollerproperty.cpp  motioncontrollerproperty.h  plcproperty.cpp  plcproperty.h  productproperty.cpp  productproperty.h  propertyframeinterface.cpp  propertyframeinterface.h  propertymodel.cpp  propertymodel.h  robotproperty.cpp  robotproperty.h  userproperty.cpp  userproperty.h
SpraySystem/DataAccess/Repositories/: baserepository.cpp  baserepository.h  camerarepository.cpp  camerarepository.h
SpraySystem/DataAccess/Repositories/Camera/: camerarepository.cpp  camerarepository.h
SpraySystem/DataAccess/Repositories/MotionController/: motioncontrollerrepository.cpp  motioncontrollerrepository.h
SpraySystem/DataAccess/Repositories/PLC/: plcrepository.cpp  plcrepository.h
SpraySystem/DataAccess/Repositories/Product/: productrepository.cpp  productrepository.h
SpraySystem/DataAccess/Repositories/Robot/: robotrepository.cpp  robotrepository.h
SpraySystem/DataAccess/Repositories/User/: userrepository.cpp  userrepository.h
SpraySystem/Device/: devicemanager.cpp  devicemanager.h  deviceoperator.cpp  deviceoperator.h
SpraySystem/Device/Camera/: cameraoperator.cpp  cameraoperator.h
SpraySystem/Device/MotionController/: mcdatapaser.cpp  mcdatapaser.h  mcoperator.cpp  mcoperator.h
SpraySystem/Device/PLC/: plcdatapaser.cpp  plcdatapaser.h  plcoperator.cpp  plcoperator.h
SpraySystem/Device/Robot/: robotoperator.cpp  robotoperator.h
SpraySystem/Forms/: global.cpp  global.h
SpraySystem/Forms/Calibration/: basecaliwidget.cpp  basecaliwidget.h  calibeltdirectionwidget.cpp  calibeltdirectionwidget.h  calibeltdirectionwidget.ui  calibrationform.cpp  calibrationform.h  calibrationform.ui  calicamerasensorwidget.cpp  calicamerasensorwidget.h  calicamerasensorwidget.ui  caliextraaxiswidget.cpp  caliextraaxiswidget.h  caliextraaxiswidget.ui  calihandeyewidget.cpp  calihandeyewidget.h  calihandeyewidget.ui  calistationwidget.cpp  calistationwidget.h  calistationwidget.ui  deviceupdater.hpp  sevenaxiscalibration.cpp  sevenaxiscalibration.h  sevenaxiscalibration.ui
SpraySystem/Forms/Devices/: devicelist.cpp  devicelist.h  devicelist.ui  devicelist.ui.autosave  mcmove.cpp  mcmove.h  mcmove.ui
SpraySystem/Forms/Login/: loginform.cpp  loginform.h  loginform.ui
SpraySystem/Forms/Main/: devicemonitor.cpp  devicemonitor.h  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  mainwindow.ui.autosave  testMain.cpp  testMain.h
SpraySystem/Forms/Products/Edit/: producteditform.cpp  producteditform.h  producteditform.ui
SpraySystem/Forms/Products/List/: productlistform.cpp  productlistform.h  productlistform.ui
SpraySystem/Forms/Systems/: systemeditform.cpp  systemeditform.h  systemeditform.ui
SpraySystem/Forms/Users/Edit/: usereditform.cpp  usereditform.h  usereditform.ui
SpraySystem/Forms/Users/List/: userlistform.cpp  userlistform.h  userlistform.ui
SpraySystem/Include/: calibration.h  calibrationdatas.h
SpraySystem/Include/Core/: abstractmanager.h  abstractmanagerbase.h  abstractmodel.h  visibility_control.hpp
SpraySystem/Include/Core/Config/: config.cpp  config.hpp  jsonserializer.cpp  jsonserializer.h
SpraySystem/Include/Core/Properties/: entity_property.hpp  property.hpp
SpraySystem/Include/IK/: abb_ik.h
SpraySystem/Include/planner/: planning_utils.h  utils.h
SpraySystem/Libs/: libopencv_calib3d.so.4.5  libopencv_imgcodecs.so.4.5
SpraySystem/Trajectory/: test_paint.cpp  trajectorycontext.cpp  trajectorycontext.h  trajectorygenerator.cpp  trajectorygenerator.h
SpraySystem/Trajectory/Strategy/: basestrategy.cpp  basestrategy.h  strategyfor7axis.cpp  strategyfor7axis.h  strategyforplan.cpp  strategyforplan.h
SpraySystem/Util/: threadsafevector.h
SpraySystem/Util/Log/: clog.cpp  clog.h
SpraySystem/Util/Socket/: qtsocketclient.cpp  qtsocketclient.h  qtsocketserver.cpp  qtsocketserver.h  socketclient.cpp  socketclient.h  socketserver.cpp  socketserver.h
SpraySystem/Util/jsonParser/: jsonparser.hpp
SpraySystem/VWSCamera/: CMakeLists.txt  README  VWSCamera.cpp  VWSCamera.h  test.cpp
SpraySystem/VWSCamera/Include/: Mv3dRgbdApilEx.h  Mv3dRgbdDefine.h  RenderImage.hpp  RenderWindow.hpp  common.hpp
SpraySystem/VWSCamera/Lib/: Mv3dRgbdCfg.ini
SpraySystem/VWSRobot/: CMakeLists.txt  VWSRobot.cpp  VWSRobot.h  ftp.cpp  ftp.h  tcpClient.cpp  tcpClient.h  test.cpp
SpraySystem/VWSRobot/Lib/: rws_interface.h  rws_poco_client.h
SpraySystem/VWSVision/: CMakeLists.txt  visionProcessFunc
SpraySystem/VWSVision/head/heightandpose/: SizeAndPose.h
SpraySystem/VWSVision/include/: HBase.h  HConst.h  HCtype.h  HDeclSpec.h  HErrorDef.h  HExtern.h  HIntDef.h  HInterfaceC.h  HMacro.h  HParallel.h  HVersNum.h  Halcon.h  HalconC.h  HalconCDefs.h  IPType.h
SpraySystem/VWSVision/include/halconc/: Hdevthread.h  Hvector.h
SpraySystem/VWSVision/include/halconcpp/: HBarCode.h  HBarrier.h  HBeadInspectionModel.h  HBgEsti.h  (+103 more)
SpraySystem/Vision/: visioncontext.cpp  visioncontext.h
(+171 files in other folders)
